@@ -102,8 +102,8 @@ stringValidators = (
         'title':u'Is a valid zip code',
         'errmsg':u'This is not a valid zip code.',
         'errid':'pfg_isZipCode',
-        'regex':r'^(\d{5}|\d{9})$',
-        'ignore':'[\-]',
+        'regex':r'^\d{5}(\d{4})?$|^[ABCEGHJKLMNPRSTVXY]{1}\d{1}[A-Z]{1}\d{1}[A-Z]{1}\d{1}$',
+        'ignore':'[\- ]',
     },
     {'id': 'isNotLinkSpam',
         'i18nid':'vocabulary_isnotlinkspam_text',
